us310 almost done